--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-fastapi
-uvicorn[standard]
-pydantic
+fastapi==0.123.5
+sqlmodel==0.0.27
+psycopg2-binary==2.9.11
+python-dotenv==1.2.1
+uvicorn==0.38.0
+pydantic==2.12.5
