--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/database_name
 
 # Example for local development:
-# DATABASE_URL=postgresql://postgres:password@localhost:5432/retail_inventory_db
+DATABASE_URL=postgresql://postgres:password@localhost:5432/retail_inventory_db
 
 # Example for Render:
-# DATABASE_URL=postgresql://user:password@hostname.render.com/database
+DATABASE_URL=postgresql://user:password@hostname.render.com/database
