chore: finalize v2.1.0 updates and health monitoring suite
- Updated app version to 2.1.0 in FastAPI metadata and root endpoint.
- Implemented HealthResponse model and /health route with uptime tracking.
- Added Supabase connection placeholders to .env.example.
- Verified system integrity with 6 passing integration tests.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DATABASE_URL=postgresql://postgres:password@localhost:5432/retail_inventory_db
 
 # Example for Render:
 DATABASE_URL=postgresql://user:password@hostname.render.com/database
+
+# Example for Supabase 
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-anon-key-here
