fix: update docker and environment config for v1.1.0 deployment
- Encoded special characters in DATABASE_URL for SQLAlchemy parsing.
- Updated docker-compose.yml to match production connection strings.
- Synchronized v1.1.0 versioning across all configuration files.
- Prepared container environment for successful Render deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '5555:5555'
     environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/retail_inventory_db
+      - DATABASE_URL=postgresql+psycopg2://postgres.eqalmqkyguuclatfoctz:g.MRS%2Bwj4Kr%2F9%2AU@aws-1-eu-west-1.pooler.supabase.com:5432/postgres
     depends_on:
       - db
     volumes:
